<?xml version="1.0" encoding="utf-8"?>
<!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  ~ Copyright (c) 2022 Loren M. Lang                                              ~
  ~                                                                               ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy  ~
  ~ of this software and associated documentation files (the "Software"), to deal ~
  ~ in the Software without restriction, including without limitation the rights  ~
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell     ~
  ~ copies of the Software, and to permit persons to whom the Software is         ~
  ~ furnished to do so, subject to the following conditions:                      ~
  ~                                                                               ~
  ~ The above copyright notice and this permission notice shall be included in all~
  ~ copies or substantial portions of the Software.                               ~
  ~                                                                               ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR    ~
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,      ~
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE   ~
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER        ~
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, ~
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE ~
  ~ SOFTWARE.                                                                     ~
  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/multi_group_cell"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="?android:attr/expandableListPreferredChildPaddingLeft"
        android:padding="1.5dp"
        tools:ignore="UselessParent">

        <TextView
            android:id="@+id/multi_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="Report"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/multi_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="Time"
            android:textColor="@android:color/black" />
    </RelativeLayout>
</LinearLayout>
